--- a/pom.xml
+++ b/pom.xml
@@ -57,16 +57,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!--Dependencies for PDF generation-->
+		<!--Apache POI - to generate WORD doc-->
 		<dependency>
-			<groupId>com.itextpdf</groupId>
-			<artifactId>itextpdf</artifactId>
-			<version>5.5.10</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.pdfbox</groupId>
-			<artifactId>pdfbox</artifactId>
-			<version>2.0.4</version>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.15</version>
 		</dependency>
 
 		<!--Swagger-->
